SAM1-11 feat(refunds): cancel a pending refund
